--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,8 @@
 
 body {
   margin: 0;
+  min-height: 100vh;
+
 }
 
 /**
@@ -379,6 +381,7 @@ template {
 }
   * {
     box-sizing: border-box;
+
   }
   
   html,
