--- a/src/index.css
+++ b/src/index.css
@@ -386,10 +386,12 @@ template {
   
   html,
   body,
-  #__next {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
+  #root
+  {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: ivory;
   }
